crates/flight-hotas-vkb/tests/snapshots/snapshot_tests__gladiator_nxt_evo_left_full_throttle.snap
---
source: crates/flight-hotas-vkb/tests/snapshot_tests.rs
assertion_line: 79
expression: state
---
GladiatorInputState {
    variant: NxtEvoLeft,
    axes: GladiatorAxes {
        roll: 1.5258789e-5,
        pitch: 1.5258789e-5,
        yaw: 1.5258789e-5,
        throttle: 1.0,
        mini_x: 1.5258789e-5,
        mini_y: 1.5258789e-5,
    },
    buttons: [
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
    ],
    hats: [
        None,
        None,
    ],
}
