crates/flight-hotas-vkb/tests/snapshots/snapshot_tests__gunfighter_full_deflection_buttons.snap
---
source: crates/flight-hotas-vkb/tests/snapshot_tests.rs
expression: state
---
GunfighterInputState {
    variant: SpaceGunfighter,
    axes: GunfighterAxes {
        roll: 1.0,
        pitch: -1.0,
        yaw: 1.0,
        throttle: 1.0,
        mini_x: -1.0,
        mini_y: 1.0,
    },
    buttons: [
        true,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        true,
        false,
        false,
        true,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
    ],
    hats: [
        Some(
            2,
        ),
        None,
    ],
}
