crates/flight-hotas-vkb/tests/snapshots/snapshot_tests__gunfighter_mcg_neutral.snap
---
source: crates/flight-hotas-vkb/tests/snapshot_tests.rs
expression: state
---
GunfighterInputState {
    variant: ModernCombatPro,
    axes: GunfighterAxes {
        roll: 1.5258789e-5,
        pitch: 1.5258789e-5,
        yaw: 1.5258789e-5,
        throttle: 0.0,
        mini_x: 1.5258789e-5,
        mini_y: 1.5258789e-5,
    },
    buttons: [
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
    ],
    hats: [
        None,
        None,
    ],
}
