crates/flight-hotas-vkb/tests/snapshots/snapshot_tests__sem_thq_full_throttle_buttons.snap
---
source: crates/flight-hotas-vkb/tests/snapshot_tests.rs
expression: state
---
SemThqInputState {
    axes: SemThqAxes {
        throttle_left: 1.0,
        throttle_right: 1.0,
        rotary_left: 0.5000076,
        rotary_right: 0.5000076,
    },
    buttons: [
        true,
        false,
        true,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
    ],
}
