crates/flight-hotas-vkb/tests/snapshots/snapshot_tests__sem_thq_idle.snap
---
source: crates/flight-hotas-vkb/tests/snapshot_tests.rs
expression: state
---
SemThqInputState {
    axes: SemThqAxes {
        throttle_left: 0.0,
        throttle_right: 0.0,
        rotary_left: 0.0,
        rotary_right: 0.0,
    },
    buttons: [
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
        false,
    ],
}
