crates/flight-hotas-vkb/tests/snapshots/snapshot_tests__stecs_mt_max_full.snap
---
source: crates/flight-hotas-vkb/tests/snapshot_tests.rs
assertion_line: 127
expression: state
---
VkcStecsMtInputState {
    variant: Max,
    axes: VkcStecsMtAxes {
        throttle: 1.0,
        mini_left: 1.0,
        mini_right: 1.0,
        rotary: 1.0,
    },
    buttons: VkcStecsMtButtons {
        word0: 0,
        word1: 0,
    },
}
