crates/flight-hotas-vkb/tests/snapshots/snapshot_tests__stecs_right_mini_neutral_buttons_only.snap
---
source: crates/flight-hotas-vkb/tests/snapshot_tests.rs
assertion_line: 92
expression: state
---
StecsInterfaceState {
    report_len: 4,
    axes: None,
    buttons: 0,
}
