crates/flight-hotas-vkb/tests/snapshots/snapshot_tests__t_rudder_mk5_full_brakes_left.snap
---
source: crates/flight-hotas-vkb/tests/snapshot_tests.rs
expression: state
---
TRudderInputState {
    variant: Mk5,
    axes: TRudderAxes {
        left_toe_brake: 1.0,
        right_toe_brake: 1.0,
        rudder: -1.0,
    },
}
